fix(character): fix equipment slot icons size on mobile

--- a/static/css/icons.css
+++ b/static/css/icons.css
@@ -45,6 +45,7 @@
 	position: absolute;
 	background-repeat: no-repeat;
 	z-index: 1;
+	background-size: 36px;
 }
 
 .iconlarge {
